# react-native-matrix-rust-sdk

./: .gitignore  package.json  react-native-matrix-rust-sdk.podspec  rondpoint.yaml
android/: CMakeLists.txt  cpp-adapter.cpp
android/src/main/java/com/matrixrustsdk/: MatrixRustSdkModule.java  MatrixRustSdkPackage.java
cpp/: react-native-matrix-rust-sdk.cpp  react-native-matrix-rust-sdk.h
example/ios/: Podfile
example/src/: App.tsx
ios/: MatrixRustSdk.h  MatrixRustSdk.mm
scripts/: generate.sh
src/: NativeMatrixRustSdk.ts  index.ts  index.tsx
